--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,6 @@
 {
-  "functions": {
-    "api/*.php": {
-      "runtime": "vercel-php@0.6.0"
-    }
-  },
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1.php"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.php"
-    }
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/$1.php" },
+    { "source": "/(.*)", "destination": "/index.php" }
   ]
 }
